--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"chai": "^4.2.0",
+		"chai-http": "^4.2.0",
 		"mocha": "^5.2.0",
 		"node-mocks-http": "^1.7.3",
 		"sinon": "^6.3.5"
