--- a/package.json
+++ b/package.json
@@ -3,33 +3,29 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"start": "node ./bin/www",
+		"development": "nodemon",
+		"build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+		"start": "NODE_ENV=production node ./dist/server.generated.js",
 		"test": "mocha --recursive ./tests --watch ./modules"
 	},
 	"dependencies": {
-		"bluebird": "^3.5.2",
-		"cookie-parser": "~1.4.3",
-		"debug": "^4.1.0",
-		"express": "~4.16.0",
-		"http-errors": "~1.6.2",
-		"mongodb": "^3.1.7",
-		"mongoose": "^5.3.2",
-		"morgan": "~1.9.0"
+		"express": "^4.16.3",
+		"mongodb": "^3.0.7",
+		"react": "^16.3.2",
+		"react-dom": "^16.3.2",
+		"react-hot-loader": "^4.1.2"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^8.0.4",
-		"babel-preset-env": "^1.7.0",
+		"babel-core": "^6.26.2",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-2": "^6.24.1",
-		"chai": "^4.2.0",
-		"chai-http": "^4.2.0",
-		"mocha": "^5.2.0",
-		"mockgoose-fix": "^7.3.6",
-		"node-mocks-http": "^1.7.3",
-		"sinon": "^6.3.5",
-		"sinon-mongoose": "^2.2.1",
-		"webpack": "^4.23.0",
+		"nodemon": "^1.17.3",
+		"webpack": "^4.6.0",
 		"webpack-cli": "^3.1.2",
+		"webpack-dev-middleware": "^3.1.2",
+		"webpack-hot-middleware": "^2.22.1",
 		"webpack-node-externals": "^1.7.2"
 	}
 }
