--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
 		"test": "mocha --recursive ./tests --watch ./modules"
 	},
 	"dependencies": {
+		"body-parser": "^1.18.3",
+		"compression": "^1.7.3",
+		"cookie-parser": "^1.4.3",
+		"cors": "^2.8.4",
 		"express": "^4.16.3",
+		"helmet": "^3.14.0",
 		"mongodb": "^3.0.7",
+		"mongoose": "^5.3.6",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-hot-loader": "^4.1.2"
