--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
 		"cookie-parser": "^1.4.3",
 		"cors": "^2.8.4",
 		"express": "^4.16.3",
+		"express-jwt": "^5.3.1",
 		"helmet": "^3.14.0",
+		"jsonwebtoken": "^8.3.0",
 		"mongodb": "^3.0.7",
 		"mongoose": "^5.3.6",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
-		"react-hot-loader": "^4.1.2"
+		"react-hot-loader": "^4.1.2",
+		"lodash": "^4.17.10",
+		"material-ui": "^1.0.0-beta.43",
+		"material-ui-icons": "^1.0.0-beta.36",
+		"react-router": "^4.2.0",
+		"react-router-dom": "^4.2.2",
+		"webpack-cli": "^3.1.2"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.2",
@@ -32,6 +40,7 @@
 		"webpack-cli": "^3.1.2",
 		"webpack-dev-middleware": "^3.1.2",
 		"webpack-hot-middleware": "^2.22.1",
-		"webpack-node-externals": "^1.7.2"
+		"webpack-node-externals": "^1.7.2",
+		"file-loader": "^1.1.11"
 	}
 }
