--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
 		"express-jwt": "^5.3.1",
 		"helmet": "^3.14.0",
 		"jsonwebtoken": "^8.3.0",
+		"lodash": "^4.17.10",
+		"material-ui": "^1.0.0-beta.43",
+		"material-ui-icons": "^1.0.0-beta.36",
 		"mongodb": "^3.0.7",
 		"mongoose": "^5.3.6",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
-		"react-hot-loader": "^4.1.2",
-		"lodash": "^4.17.10",
-		"material-ui": "^1.0.0-beta.43",
-		"material-ui-icons": "^1.0.0-beta.36",
+		"react-hot-loader": "^4.3.11",
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
 		"webpack-cli": "^3.1.2"
@@ -35,12 +35,12 @@
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-2": "^6.24.1",
+		"file-loader": "^1.1.11",
 		"nodemon": "^1.17.3",
 		"webpack": "^4.6.0",
 		"webpack-cli": "^3.1.2",
-		"webpack-dev-middleware": "^3.1.2",
-		"webpack-hot-middleware": "^2.22.1",
-		"webpack-node-externals": "^1.7.2",
-		"file-loader": "^1.1.11"
+		"webpack-dev-middleware": "^3.4.0",
+		"webpack-hot-middleware": "^2.24.3",
+		"webpack-node-externals": "^1.7.2"
 	}
 }
