--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"development": "nodemon",
+		"dev": "nodemon",
 		"build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
 		"start": "NODE_ENV=production node ./dist/server.generated.js",
 		"test": "mocha --recursive ./tests --watch ./modules"
@@ -25,9 +25,10 @@
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-hot-loader": "^4.3.11",
+		"react-redux": "^5.1.0",
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
-		"webpack-cli": "^3.1.2"
+		"redux": "^4.0.1"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.2",
