--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
 	"repository": "https://github.com/simon8029/canechair-cli.git",
 	"author": "simon8029 <simon.lau@msn.com>",
 	"license": "MIT",
+	"bin": {
+		"cccli": "./dist/index.js"
+	},
 	"scripts": {
 		"start": "ts-node src/index.ts",
 		"start:watch": "nodemon --watch src --exec ts-node src/index.ts",
-		"build": "tsc"
+		"build": "tsc && shx rm -rf dist/templates && shx cp -r src/templates dist"
 	},
 	"devDependencies": {
+		"@types/ejs": "^3.0.4",
 		"@types/inquirer": "^7.3.1",
 		"@types/node": "^14.11.10",
-		"chalk": "^4.1.0"
+		"@types/shelljs": "^0.8.8",
+		"@types/yargs": "^15.0.9",
+		"shx": "^0.3.2"
 	},
 	"dependencies": {
-		"inquirer": "^7.3.3"
+		"chalk": "^4.1.0",
+		"ejs": "^3.1.5",
+		"inquirer": "^7.3.3",
+		"shelljs": "^0.8.4",
+		"yargs": "^16.1.0"
 	}
 }
